feat: shield and suit refactor and fix timetables
